--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
+    "expo-device": "~5.4.0",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "^12.3.0",
     "expo-location": "^16.3.0",
+    "expo-notifications": "~0.20.1",
     "expo-router": "^2.0.14",
     "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -42,6 +45,7 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-otp-textinput": "^1.1.3",
     "react-native-reanimated": "^3.3.0",
+    "react-native-sound": "^0.11.2",
     "react-native-webview": "13.2.2",
     "react-redux": "^9.0.2",
     "redux": "^5.0.0",
